# opensoundboard

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  design.md  product.md  pyproject.toml
.interface-design/: system.md
app/: __init__.py  bootstrap.py  main.py
app/application/: __init__.py  hotkeys.py  service.py
app/domain/: __init__.py  errors.py
app/domain/enums/: __init__.py  hotkey_status.py  playback.py
app/domain/interfaces/: __init__.py  contracts.py
app/domain/models/: __init__.py  board.py  hotkey.py  playback.py  sound.py
app/infrastructure/: __init__.py  audio.py  database.py  file_library.py
app/infrastructure/hotkeys/: __init__.py  capability.py  disabled.py  pynput_service.py
app/presentation/: board_settings.py  hotkey_bridge.py  hotkey_dialog.py  hotkey_settings.py  main_window.py  material_icons.py  operator_strip.py  settings_dialog.py  sound_pad.py  theme.py  viewmodel.py
app/presentation/assets/material-symbols/: NOTICE
docs/: ARCHITECTURE.md  HOTKEY_COMPATIBILITY.md  PACKAGING.md  WINDOWS_BETA_QA.md
scripts/: build_windows.ps1
tests/integration/: test_bootstrap.py  test_hotkey_qt.py
tests/unit/: test_audio_engine.py  test_disabled_hotkeys.py  test_domain_models.py  test_file_library.py  test_hotkey_coordinator.py  test_hotkey_models.py  test_hotkey_repository.py  test_hotkey_status.py  test_material_icons.py  test_playback_and_recovery.py  test_pynput_hotkeys.py  test_soundboard_service.py  test_sqlite_store.py  test_theme.py  test_windows_packaging.py
