[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opensoundboard"
version = "0.1.0"
description = "An offline-first cross-platform desktop soundboard prototype."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "PySide6>=6.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]
hotkeys = [
  "pynput>=1.7",
]
package = [
  "PyInstaller>=6.21,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.presentation" = ["assets/material-symbols/*.svg", "assets/material-symbols/NOTICE"]
